--- a/index.html
+++ b/index.html
@@ -21,9 +21,26 @@
       <h1>
           <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <form class="d-flex" id ="search-form">
-      <input class="form-control me-2" id = "city-input" type="city" placeholder="Enter City" aria-label="Enter City">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+    <form id ="search-form" class="mb-3">
+      <div class = "row">
+      <div class = "col-9">
+        <input 
+          class="form-control" 
+          type="search" 
+          placeholder="Enter City" 
+          id = "city-input"
+          autocomplete="off"
+        />
+      
+    </div>
+      <div class="col-3">
+        <input 
+          type="submit" 
+          value="Search"
+          class="btn btn-primary w-100" />
+      
+    </div>
+    </div>
     </form>
   </div>
 </nav>
@@ -31,7 +48,7 @@
       <h1 id="city"></h1>
       <ul>
          <li id= "temp"></li> 
-        <li id = "date"></li>
+        <li>Last updated: <span id = "date"></span> </li>
          <li id = "discription"></li>
   
 
