fahrenheit to celcius conversion

--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
          <li id= "temp"></li> 
         <li>Last updated: <span id = "date"></span> </li>
          <li id = "discription"></li>
-  
-
-
       </ul>
      
       <p>
@@ -68,7 +65,14 @@
                   <li>
                     Wind Speed: <span id = "Wind" ></span>
                   </li>
-          
+              <div class="row">
+              <div class="clearfix weather-temp">
+                <img src="" alt="clear" id= "icon" class="float-left">
+                <div class="float-left">
+                  <strong id = "temperature"></strong>
+                  <span class="units"> °C | <a href= "#"  id = "fahrenheit-link">°F</a></span>
+                </div>
+              </div>
               </div>
           </div>
       </div>
