--- a/index.html
+++ b/index.html
@@ -15,79 +15,80 @@
     <title>Weather App</title>
   </head>
   <body>
-<div class="container">
-<div class= "weather-app">
+    <div class="container">
+      <div class="weather-app">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="search"
+                placeholder="Enter City"
+                class="form-control"
+                id="city-input"
+                autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="search"
+                class="btn btn-primary w-100"
+              />
+            </div>
+          </div>
+        </form>
 
+        <h1 id="city">Doylestown</h1>
 
-
-    <form id="search-form" class="mb-3">
-      <div class="row">
-        <div class="col-9">
-          <input 
-          type="search" 
-          placeholder="Enter City" 
-          class="form-control"
-          id="city-input"
-          autocomplete="off"
-          />
+        <div class="location-details">
+          <ul>
+            <li>Friday 5:00pm <span id="date"></span></li>
+            <li>Last updated: <span id="date"></span></li>
+            <li id="discription">Sunny</li>
+          </ul>
         </div>
-        <div class="col-3">
-          <input 
-          type="submit"
-          value="search"
-          class="btn btn-primary w-100"
-          />
+
+        <div class="row">
+          <div class="col-6">
+            <div class="weather-details">
+              <ul>
+                <li>Humidity:<span id="humidity"></span></li>
+                <li>Wind Speed: <span id="Wind"></span></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="icon-temp">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                alt="cloud image"
+                id="icon"
+              />
+              <strong id="temperature"></strong>
+              <span class="units" id="celcius-link" class="active">
+                20°C | <a href="#" id="fahrenheit-link">°F</a></span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="forecast-date">Thursday</div>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                alt=""
+                width="36"
+              />
+              <div class="forecast-temp">
+                <span class="forecast-temp-max"> 18° </span>
+                <span class="forecast-temp-min"> 12° </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </form>
-
-  <h1 id="city">Doylestown</h1>
-      
-  <div class="location-details">
-  <ul>
-      <li> Friday 5:00pm <span id= "date"></span></li>
-      <li>Last updated: <span id = "date"></span> </li>
-      <li id = "discription">Sunny</li>
-  </ul>
-</div>  
-
-<div class="row">
-<div class="col-6">
-  <div class="weather-details">
-    <ul>
-      <li>
-        Humidity:<span id = "humidity" ></span>
-      </li>
-      <li>
-        Wind Speed: <span id = "Wind" ></span>
-      </li>
-      <li>
-        Percipitation:<span id="Percipitation"></span>
-      </li>
-    </ul>  
-  </div>
-  </div>
-  <div class="col-6">
-   <div class="icon-temp">
-        <img 
-          src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" 
-          alt="cloud image"
-          id= "icon"
-        >
-        <strong id = "temperature"></strong>
-        <span class="units" id = "celcius-link" class="active"> 20°C | 
-        <a href= "#"  id = "fahrenheit-link">°F</a></span>
     </div>
-  </div>
- </div>   
-    </div>
-  </div>
-   <script  src = "script.js"></script>   
+    <script src="script.js"></script>
   </body>
 </html>
-
-
-
-
-
-
