added forecast api

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
           <div class="col-6">
             <div class="weather-details">
               <ul>
-                <li>Humidity:<span id="humidity"></span></li>
+                <li>Humidity: <span id="humidity"></span></li>
                 <li>Wind Speed: <span id="Wind"></span></li>
               </ul>
             </div>
           </div>
+
+          <div class="weather-forecast" id="weather-forecast"></div>
+
           <div class="col-6">
             <div class="icon-temp">
               <img
@@ -69,26 +72,8 @@
                 ><a href="#" id="celcius-link" class="active"> °C |</a>
                 <a href="#" id="fahrenheit-link" class="active">°F</a></span
               >
-             </div>
-            <div class="weather-forecast">
-            <div class="row">
-            </div class="col-2">
-              <div class="weather-forecast-date">
-                Friday
-              </div>
-              <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt=""
-              width="36"
-              />
-              <div class="weather-forecast-temp">
-                <span class="weather-forecast-temp-max"> 18° | </span>
-                <span class="weather-forecast-temp-min"> 12°</span>
-              </div>
             </div>
           </div>
-           
-          </div>
-        </div>
       </div>
     </div>
     <script src="script.js"></script>
